force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/DNBoptimizer__DnBCompanyRecord__c.object-meta.xml
<CustomObject>
    <label>D&amp;B Company Record</label>
    <nameField>
        <label>Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>D&amp;B Company Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>