force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__BusinessDescription__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__BusinessDescription__c</fullName>
    <description>A description of the entity’s business operations, if available.</description>
    <inlineHelpText>A description of the entity’s business operations, if available.</inlineHelpText>
    <label>Business Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>