force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__DelistedIndicator__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__DelistedIndicator__c</fullName>
    <description>Indicates that the subject has requested that they not be included in any D&amp;B marketing lists (e.g.: mailing, telephone).</description>
    <inlineHelpText>Indicates that the subject has requested that they not be included in any D&amp;B marketing lists (e.g.: mailing, telephone).</inlineHelpText>
    <label>Opted out of Direct Marketing</label>
    <length>50</length>
    <type>Text</type>
</CustomField>