force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__DomesticUltimateIndicator__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__DomesticUltimateIndicator__c</fullName>
    <description>Indicates whether the subject record is the Domestic Ultimate Parent within their corporate family tree.</description>
    <inlineHelpText>Indicates whether the subject record is the Domestic Ultimate Parent within their corporate family tree.</inlineHelpText>
    <label>Domestic Ultimate Indicator</label>
    <length>50</length>
    <type>Text</type>
</CustomField>