force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__DUNSNumber__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__DUNSNumber__c</fullName>
    <description>The Dun &amp; Bradstreet D-U-N-S® Number is an identification number assigned by Dun &amp; Bradstreet that uniquely identifies the entity in accordance with the Data Universal Numbering System (D-U-N-S).</description>
    <inlineHelpText>The Dun &amp; Bradstreet D-U-N-S® Number is an identification number assigned by Dun &amp; Bradstreet that uniquely identifies the entity in accordance with the Data Universal Numbering System (D-U-N-S).</inlineHelpText>
    <label>D-U-N-S Number</label>
    <length>9</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>