force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__EmployeeCountTotal__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__EmployeeCountTotal__c</fullName>
    <description>The total number of employees in the business organization; it should include subsidiary and branch locations.</description>
    <inlineHelpText>The total number of employees in the business organization; it should include subsidiary and branch locations.</inlineHelpText>
    <label>Employee Count Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>