force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__EmployeeCountTotalReliabilityDescription__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__EmployeeCountTotalReliabilityDescription__c</fullName>
    <description>A description of the reliability of the Employees Total figure.</description>
    <inlineHelpText>A description of the reliability of the Employees Total figure.</inlineHelpText>
    <label>Employee Count Total Reliability Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>