force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__EmployeesHere__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__EmployeesHere__c</fullName>
    <description>The number of employees at this location.</description>
    <inlineHelpText>The number of employees at this location.</inlineHelpText>
    <label>Employee Count Here</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>