force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__GlobalUltimateBusinessName__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__GlobalUltimateBusinessName__c</fullName>
    <description>The primary name of the highest level parent within a corporate family tree. A parent is a corporation that owns more than 50% of another corporation&apos;s capital stock. A subject may be its own global ultimate.</description>
    <inlineHelpText>The primary name of the highest level parent within a corporate family tree. A parent is a corporation that owns more than 50% of another corporation&apos;s capital stock. A subject may be its own global ultimate.</inlineHelpText>
    <label>Global Ultimate Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>