force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__GlobalUltimateDUNSNumber__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__GlobalUltimateDUNSNumber__c</fullName>
    <description>The D-U-N-S number of the highest-level parent within a corporate family tree. A parent is a corporation that owns more than 50% of another corporation&apos;s capital stock. A subject may be its own global ultimate.</description>
    <inlineHelpText>The D-U-N-S number of the highest-level parent within a corporate family tree. A parent is a corporation that owns more than 50% of another corporation&apos;s capital stock. A subject may be its own global ultimate.</inlineHelpText>
    <label>Global Ultimate D-U-N-S Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>