force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__HeadquarterBusinessName__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__HeadquarterBusinessName__c</fullName>
    <description>The business name of the headquarters company. A headquarters is a business establishment that has branches or divisions reporting to it.</description>
    <inlineHelpText>The business name of the headquarters company. A headquarters is a business establishment that has branches or divisions reporting to it.</inlineHelpText>
    <label>Headquarter Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>