force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__HeadquarterDUNSNumber__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__HeadquarterDUNSNumber__c</fullName>
    <description>The D-U-N-S Number of the headquarters company. A headquarters is a business establishment that has branches or divisions reporting to it.</description>
    <inlineHelpText>The D-U-N-S Number of the headquarters company. A headquarters is a business establishment that has branches or divisions reporting to it.</inlineHelpText>
    <label>Headquarter D-U-N-S Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>