force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__inactive__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Inactivate a record from data vendor</description>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>