force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__LegalStructureDescription__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__LegalStructureDescription__c</fullName>
    <description>A description of the legal structure of the business.</description>
    <inlineHelpText>A description of the legal structure of the business.</inlineHelpText>
    <label>Legal Structure Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>