force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__MailingAddress1__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__MailingAddress1__c</fullName>
    <description>The address number, or post office box number, and street name where the business has its mail delivered.</description>
    <inlineHelpText>The address number, or post office box number, and street name where the business has its mail delivered.</inlineHelpText>
    <label>Mailing Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>