force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__MailingAddress2__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__MailingAddress2__c</fullName>
    <description>The second line of the address number, or post office box number, and street name where the business has its mail delivered.</description>
    <inlineHelpText>The second line of the address number, or post office box number, and street name where the business has its mail delivered.</inlineHelpText>
    <label>Mailing Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>