force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__MailingCityName__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__MailingCityName__c</fullName>
    <description>The name of the city where the business has its mail delivered.</description>
    <inlineHelpText>The name of the city where the business has its mail delivered.</inlineHelpText>
    <label>Mailing Address City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>