force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__MailingCountryCode__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__MailingCountryCode__c</fullName>
    <description>The two-letter country/region code, defined by the International Organization for Standardization (ISO) ISO 3166-1 scheme, identifying the country/region which the business uses for mailing purposes.</description>
    <inlineHelpText>The two-letter country/region code, defined by the International Organization for Standardization (ISO) ISO 3166-1 scheme, identifying the country/region which the business uses for mailing purposes.</inlineHelpText>
    <label>Mailing Address Country/Region Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>