force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__MailingCountryCode_ISO__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__MailingCountryCode_ISO__c</fullName>
    <description>Mailing Address Country/Region Code normalized by the Salesforce ISO Service</description>
    <label>Mailing Address Country/Region Code ISO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>