force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__MailingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__MailingPostalCode__c</fullName>
    <description>An identifier used by the local country/region Postal Authority which the business uses for mailing purposes.</description>
    <inlineHelpText>An identifier used by the local country/region Postal Authority which the business uses for mailing purposes.</inlineHelpText>
    <label>Mailing Address Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>