force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__MailingStateAbbreviation__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__MailingStateAbbreviation__c</fullName>
    <description>The abbreviation for the state or province where the business has its mail delivered.</description>
    <inlineHelpText>The abbreviation for the state or province where the business has its mail delivered.</inlineHelpText>
    <label>Mailing Address State Abbrev</label>
    <length>255</length>
    <type>Text</type>
</CustomField>