force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__MailingStateAbbreviation_ISO__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__MailingStateAbbreviation_ISO__c</fullName>
    <description>Mailing Address State Abbrev normalized by the Salesforce ISO Service</description>
    <label>Mailing Address State Abbrev ISO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>