force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__MailingStateName__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__MailingStateName__c</fullName>
    <description>The name of the state or province where the business has its mail delivered.</description>
    <inlineHelpText>The name of the state or province where the business has its mail delivered.</inlineHelpText>
    <label>Mailing Address State Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>