force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__NAICSCode1__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__NAICSCode1__c</fullName>
    <description>The primary North American Industry Classification System (NAICS) code for the business.</description>
    <inlineHelpText>The primary North American Industry Classification System (NAICS) code for the business.</inlineHelpText>
    <label>NAICS Code 1</label>
    <length>6</length>
    <type>Text</type>
</CustomField>