force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__NAICSCode2__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__NAICSCode2__c</fullName>
    <description>The secondary North American Industry Classification System (NAICS) code for the business.</description>
    <inlineHelpText>The secondary North American Industry Classification System (NAICS) code for the business.</inlineHelpText>
    <label>NAICS Code 2</label>
    <length>6</length>
    <type>Text</type>
</CustomField>