force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__NAICSCode3__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__NAICSCode3__c</fullName>
    <description>The tertiary North American Industry Classification System (NAICS) code for the business.</description>
    <inlineHelpText>The tertiary North American Industry Classification System (NAICS) code for the business.</inlineHelpText>
    <label>NAICS Code 3</label>
    <length>6</length>
    <type>Text</type>
</CustomField>