force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__NationalIdentificationNumber3__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__NationalIdentificationNumber3__c</fullName>
    <description>The business identification number used in some countries for business registration and tax collection.</description>
    <inlineHelpText>The business identification number used in some countries for business registration and tax collection.</inlineHelpText>
    <label>National Identification Number 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>