force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__NationalIdentificationSystem4__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__NationalIdentificationSystem4__c</fullName>
    <description>A description of the type of National ID number 4 provided.</description>
    <inlineHelpText>A description of the type of National ID number 4 provided.</inlineHelpText>
    <label>National Identification System 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>