force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__NumberofFamilyMembers__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__NumberofFamilyMembers__c</fullName>
    <description>This is the number of linkages in the upward and downward directions of the entire family tree that the subject belongs to, starting from then global ultimate.</description>
    <inlineHelpText>This is the number of linkages in the upward and downward directions of the entire family tree that the subject belongs to, starting from then global ultimate.</inlineHelpText>
    <label>Number of Family Members</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>