force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__OutofBusinessIndicator__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__OutofBusinessIndicator__c</fullName>
    <description>Indicates whether the business at this address has discontinued operations.</description>
    <inlineHelpText>Indicates whether the business at this address has discontinued operations.</inlineHelpText>
    <label>Out of Business Indicator</label>
    <length>50</length>
    <type>Text</type>
</CustomField>