force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__ParentBusinessName__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__ParentBusinessName__c</fullName>
    <description>The business name of the parent company. A parent is a corporation that owns more than 50% of another corporation&apos;s capital stock; these owned companies are subsidiaries to the parent company.</description>
    <inlineHelpText>The business name of the parent company. A parent is a corporation that owns more than 50% of another corporation&apos;s capital stock; these owned companies are subsidiaries to the parent company.</inlineHelpText>
    <label>Parent Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>