force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__PrimaryCountyName__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__PrimaryCountyName__c</fullName>
    <description>The name of the county where the business is physically located.</description>
    <inlineHelpText>The name of the county where the business is physically located.</inlineHelpText>
    <label>Primary Address County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>