force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__PrimaryLongitude__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__PrimaryLongitude__c</fullName>
    <description>The angular distance of the organization&apos;s primary physical address east or west from an imaginary line (called the prime meridian) that goes from the North Pole to the South Pole measured through 90 degrees expressed in decimal numbers.</description>
    <inlineHelpText>The angular distance of the organization&apos;s primary physical address east or west from an imaginary line (called the prime meridian) that goes from the North Pole to the South Pole measured through 90 degrees expressed in decimal numbers.</inlineHelpText>
    <label>Primary Address Longitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>