force-app/main/default/objects/DNBoptimizer__DnBCompanyRecord__c/fields/DNBoptimizer__PrimaryPostalCode__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__PrimaryPostalCode__c</fullName>
    <description>An identifier used by the local country/region Postal Authority to identify where the business is located.</description>
    <inlineHelpText>An identifier used by the local country/region Postal Authority to identify where the business is located.</inlineHelpText>
    <label>Primary Address Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>